@@ -1,8 +1,7 @@
 package com.example.community_education.Tool.encryption;
 
-import sun.misc.BASE64Encoder;
-
-import java.io.UnsupportedEncodingException;
+import java.util.Base64;
+import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 
@@ -10,14 +9,10 @@ import java.security.NoSuchAlgorithmException;
  * 加密
  * */
 public class MDFive {
-    public static String EncoderByMd5(String str) throws NoSuchAlgorithmException, UnsupportedEncodingException {
-
-        //确定算法
+    public static String EncoderByMd5(String str) throws NoSuchAlgorithmException {
         MessageDigest md5 = MessageDigest.getInstance("MD5");
-        BASE64Encoder base64en = new BASE64Encoder();
-        //加密后的字符串
-        String newstr = base64en.encode(md5.digest(str.getBytes("utf-8")));
-        return newstr;
+        byte[] digest = md5.digest(str.getBytes(StandardCharsets.UTF_8));
+        return Base64.getEncoder().encodeToString(digest);
     }
 
 }
